# robotpy-adi

./: .gitignore  LICENSE  README.rst  pyproject.toml
.github/workflows/: dist.yml
adis16448/: __init__.py
adis16448/include/adi/: ADIS16448_IMU.h
adis16448/src/: ADIS16448_IMU.cpp
adis16470/: __init__.py
adis16470/include/adi/: ADIS16470_IMU.h
adis16470/src/: ADIS16470_IMU.cpp
docs/: .gitignore  Makefile  api.rst  conf.py  index.rst  setup.py
examples/adis16448/basic-read-test/: robot.py
examples/adis16448/init-test/: robot.py
examples/adis16470/: robot.py
tests/: test_adis16448.py  test_adis16470.py
